# WMEngine

./: CMakeLists.txt  README.md  build.bat  launch.bat
assets/shader/: common.shd  fragment.shd  vertex.shd
include/: wm_default_configuration.inc  wm_engine.h  wm_utils.h
include/platform/: wm_platform.h  wm_window.h
include/platform/win32/: wm_win32_window.h
src/: Game.c
src/platform/win32/: wm_win32_window.c
